[gd_scene load_steps=3 format=3 uid="uid://0kg4f6wgbe03"]

[ext_resource type="PackedScene" uid="uid://qcmrf7u1heaw" path="res://common/hud.tscn" id="1_ry553"]
[ext_resource type="Script" path="res://sprites/blood_layer.gd" id="2_vymdk"]

[node name="SpritesDemo" type="Node2D"]

[node name="Hud" parent="." instance=ExtResource("1_ry553")]

[node name="PanelContainer2" type="PanelContainer" parent="Hud"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -154.0
offset_bottom = 85.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/PanelContainer2"]
layout_mode = 2
alignment = 1

[node name="autofill" type="CheckButton" parent="Hud/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Autofill"

[node name="HBoxContainer" type="HBoxContainer" parent="Hud/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Hud/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scale: "

[node name="scale_label" type="Label" parent="Hud/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20.775, 0)
layout_mode = 2
text = "1"

[node name="ScaleSlider" type="HSlider" parent="Hud/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="fill_percent" type="Label" parent="Hud/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Blood Fill: 0%"
horizontal_alignment = 1

[node name="region_size" type="Label" parent="Hud/PanelContainer2/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="blood_count" type="Label" parent="Hud/PanelContainer2/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Clear" type="Button" parent="Hud/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="blood_layer" type="Node2D" parent="."]
script = ExtResource("2_vymdk")
region = Rect2i(288, 162, 576, 324)
border_color = Color(0, 0, 1, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
